--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
    
     <hr>
-    <h3>Schools and Class</h3>
+    <h3>Schools</h3>
     <ul>
         <li>Govt. school,MBS</li>
         <li>GIS,MBS</li>
